# barnacle

node/src/: chain_spec.rs
pallets/dotmog/: Cargo.toml  README.md
pallets/dotmog/src/: benchmarking.rs  game_config.rs  game_event.rs  general.rs  lib.rs  mock.rs  tests.rs
pallets/dotmogbase/: Cargo.toml
pallets/dotmogbase/src/: lib.rs  mock.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
